# connectoviz

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: .readthedocs.yaml  Makefile  api.rst  check_imports.py  classes.rst  conf.py  examples.rst  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
examples/: plot_basic_usage.ipynb  plot_multilayer_example.ipynb
src/connectoviz/: __init__.py  config.py  connectoviz.py  plot_circular_connectome.py  plot_circular_connectome_template.py  plot_main.py
src/connectoviz/core/: connectome.py
src/connectoviz/data/atlases/: utils.py
src/connectoviz/data/atlases/available_atlases/: __init__.py  available_atlases.py
src/connectoviz/data/atlases/available_atlases/huang2022/MNI152/: .~lock.space-MNI152_atlas-huang2022_res-1mm_dseg.csv#
src/connectoviz/data/atlases/available_atlases/schaefer2018tian2020/: references.bib
src/connectoviz/data/connectomes/: fan2016.csv  huang2022.csv  schaefer2018tian2020_200_7.csv
src/connectoviz/io/: handle_layout_prefrences.py  parsers.py  test_Connectome.py  test_handle_layout.py  test_parsers.py
src/connectoviz/plotting/: circular_graph.py  circular_layout.py  circular_plots.py  ring_layers.py
src/connectoviz/utils/: handle_layout_prefrences.py
src/connectoviz/visualization/: circular_graph.py  circular_graph_legacy.py  circular_graph_legacy_jose.py  circular_layout.py  circular_plot_builder.py
tests/: __init__.py  main_test.py  test_connectoviz.py  test_example.py  test_structure.py
