[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "connectoviz"
version = "0.1.0"
description = "A robust and customizable Python package for visualizing circular connectomes."
readme = "README.rst"
authors = [
  {name = "Gal Kepler", email = "galkepler@gmail.com"}
]
maintainers = [
  {name = "Gal Kepler", email = "galkepler@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [

]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/GalKepler/connectoviz/issues"
changelog = "https://github.com/GalKepler/connectoviz/blob/master/changelog.md"
homepage = "https://github.com/GalKepler/connectoviz"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."
# Use strict defaults
strict = false
warn_unreachable = true
warn_no_return = false

[tool.mypy-tests]
# Don't require test functions to include types
allow_untyped_defs = true
disable_error_code = "attr-defined"
