[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "connectoviz"
version = "0.1.0"
description = "A robust and customizable Python package for visualizing circular connectomes."
readme = "README.rst"
authors = [
  {name = "Gal Kepler", email = "galkepler@gmail.com"}
]
maintainers = [
  {name = "Gal Kepler", email = "galkepler@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha", # Indicate the development stage (e.g., 3 - Alpha, 4 - Beta, 5 - Production/Stable)
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License", # Ensure this matches your chosen license
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
license = {text = "MIT license"}
dependencies = [
    "numpy>=2.3.0",        # Numerical operations, essential for scientific computing
    "matplotlib>=3.10.0",    # Core plotting library for creating visualizations
    "scipy>=1.16.0",         # Scientific computing, potentially for graph algorithms or data processing
    "pandas>=2.2.0",        # Data structures and analysis (e.g., handling node/edge data)
    "networkx>=3.3.0",      # For graph data structures and algorithms, useful for connectomes
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff",  # linting
    "black",  # code formatting
    "isort",  # import sorting
    "pytest",
    "pytest-cov",  # pytest plugin for coverage reporting
    "pre-commit",  # manage pre-commit hooks
]

[project.urls]

bugs = "https://github.com/GalKepler/connectoviz/issues"
changelog = "https://github.com/GalKepler/connectoviz/blob/master/changelog.md"
homepage = "https://github.com/GalKepler/connectoviz"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."
# Use strict defaults
strict = false
warn_unreachable = true
warn_no_return = false

[tool.mypy-tests]
# Don't require test functions to include types
allow_untyped_defs = true
disable_error_code = "attr-defined"
